@@ -80,7 +80,7 @@ if test x"$enable_profile" = x"yes"; then
    CFLAGS="$CFLAGS -pg"
 fi 
 
-CFLAGS="$CFLAGS -D_REENTRANT -DGC_THREADS"
+CFLAGS="$CFLAGS -D_REENTRANT -DGC_THREADS -D_POSIX_C_SOURCE=200112L"
 
 AC_SYS_LARGEFILE 
 
